--- a/Raytracing/imgui.ini
+++ b/Raytracing/imgui.ini
@@ -20,18 +20,26 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,26
-Size=1143,874
+Size=1273,874
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Settings]
-Pos=1145,26
-Size=455,874
+Pos=1275,462
+Size=325,438
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
+
+[Window][Scene]
+Pos=1275,26
+Size=325,434
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=987,494 Size=1600,874 Split=X
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=1143,874 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=455,874 Selected=0x54723243
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=1340,523 Size=1600,874 Split=X
+  DockNode    ID=0x00000001 Parent=0xF2944C7F SizeRef=1273,874 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0xF2944C7F SizeRef=325,874 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=447,434 Selected=0xE192E354
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=447,438 Selected=0x54723243
 
